--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.dataSource.driverClassName = org.postgresql.Driver
 spring.dataSource.url = jdbc:postgresql://localhost:5432/apartment_crawler
 spring.dataSource.username = postgres
-spring.dataSource.password = system
+spring.dataSource.password = 123
 spring.dataSource.usesJndi = false
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -16,10 +16,3 @@ logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss} %magenta([%thread]) %highlight(%
 
 server.error.whitelabel.enabled=false
 spring.thymeleaf.cache=false
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=goe.alexander
-spring.mail.password=rom012345
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
